--- a/tiny-haproxy/Dockerfile
+++ b/tiny-haproxy/Dockerfile
@@ -1,12 +1,9 @@
-# minimal image to support just the runtime for mosquitto
-# file is using http://mosquitto.org/files/source/mosquitto-1.2.3.tar.gz
-# built using buildroot following instructions from
-# http://blog.docker.io/2013/06/create-light-weight-docker-containers-buildroot
-# instructions at https://github.com/lexlapax/Dockerfiles/tree/master/mosquitto-lite
+# minimal image to run haproxy
 
-FROM lapax/buildroot:mosquitto
+FROM tinyhaproxy
 MAINTAINER Lex Lapax <lexlapax@gmail.com>
 
-RUN adduser -S -H -D -s /bin/false mosquitto
-EXPOSE 1883
-ENTRYPOINT ["/usr/sbin/mosquitto"]
+RUN adduser -S -H -D -s /bin/false haproxy
+EXPOSE 80
+CMD ["/usr/sbin/haproxy", "-f", "/etc/haproxy/haproxy.cfg"]
+CMD ["/bin/sh"]
