--- a/tiny-haproxy/Dockerfile
+++ b/tiny-haproxy/Dockerfile
@@ -6,4 +6,4 @@ MAINTAINER Lex Lapax <lexlapax@gmail.com>
 RUN adduser -S -H -D -s /bin/false haproxy
 EXPOSE 80
 CMD ["/usr/sbin/haproxy", "-f", "/etc/haproxy/haproxy.cfg"]
-CMD ["/bin/sh"]
+CMD ["/bin/sh", "-l"]
