added python supervisord

--- a/tiny-haproxy/buildroot/buildroot.config
+++ b/tiny-haproxy/buildroot/buildroot.config
@@ -509,7 +509,50 @@ BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox-1.21.x.config"
 # BR2_PACKAGE_NODEJS is not set
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
-# BR2_PACKAGE_PYTHON is not set
+BR2_PACKAGE_PYTHON=y
+# BR2_PACKAGE_PYTHON_PY_ONLY is not set
+BR2_PACKAGE_PYTHON_PYC_ONLY=y
+# BR2_PACKAGE_PYTHON_PY_PYC is not set
+
+#
+# core python modules
+#
+
+#
+# The following modules are unusual or require extra libraries
+#
+# BR2_PACKAGE_PYTHON_BZIP2 is not set
+# BR2_PACKAGE_PYTHON_BSDDB is not set
+# BR2_PACKAGE_PYTHON_CODECSCJK is not set
+# BR2_PACKAGE_PYTHON_CURSES is not set
+BR2_PACKAGE_PYTHON_PYEXPAT=y
+# BR2_PACKAGE_PYTHON_READLINE is not set
+# BR2_PACKAGE_PYTHON_SSL is not set
+BR2_PACKAGE_PYTHON_UNICODEDATA=y
+# BR2_PACKAGE_PYTHON_SQLITE is not set
+BR2_PACKAGE_PYTHON_ZLIB=y
+BR2_PACKAGE_PYTHON_HASHLIB=y
+
+#
+# external python modules
+#
+# BR2_PACKAGE_PYTHON_BOTTLE is not set
+# BR2_PACKAGE_PYTHON_CRC16 is not set
+# BR2_PACKAGE_PYTHON_DPKT is not set
+# BR2_PACKAGE_PYTHON_ID3 is not set
+# BR2_PACKAGE_PYTHON_IPY is not set
+# BR2_PACKAGE_PYTHON_MAD is not set
+BR2_PACKAGE_PYTHON_MELD3=y
+# BR2_PACKAGE_PYTHON_NETIFACES is not set
+# BR2_PACKAGE_PYTHON_NFC is not set
+BR2_PACKAGE_PYTHON_PROTOBUF=y
+# BR2_PACKAGE_PYTHON_PYGAME is not set
+# BR2_PACKAGE_PYTHON_PYPARSING is not set
+# BR2_PACKAGE_PYTHON_PYRO is not set
+# BR2_PACKAGE_PYTHON_PYZMQ is not set
+# BR2_PACKAGE_PYTHON_SERIAL is not set
+BR2_PACKAGE_PYTHON_SETUPTOOLS=y
+# BR2_PACKAGE_PYTHON_THRIFT is not set
 # BR2_PACKAGE_PYTHON3 is not set
 # BR2_PACKAGE_RUBY is not set
 # BR2_PACKAGE_TCL is not set
@@ -680,7 +723,7 @@ BR2_PACKAGE_OPENSSL_ENGINES=y
 # JSON/XML
 #
 # BR2_PACKAGE_CJSON is not set
-# BR2_PACKAGE_EXPAT is not set
+BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_EZXML is not set
 # BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JSON_C is not set
@@ -763,7 +806,6 @@ BR2_PACKAGE_OPENSSL_ENGINES=y
 # BR2_PACKAGE_ZEROMQ is not set
 # BR2_PACKAGE_ZMQPP is not set
 # BR2_PACKAGE_ZYRE is not set
-BR2_PACKAGE_MOSQUITTO=y
 
 #
 # Other
@@ -790,7 +832,7 @@ BR2_PACKAGE_MOSQUITTO=y
 # BR2_PACKAGE_LIBELF is not set
 # BR2_PACKAGE_LIBEV is not set
 # BR2_PACKAGE_LIBEVENT is not set
-# BR2_PACKAGE_LIBFFI is not set
+BR2_PACKAGE_LIBFFI=y
 # BR2_PACKAGE_LIBGLIB2 is not set
 # BR2_PACKAGE_LIBICAL is not set
 # BR2_PACKAGE_LIBLOG4C_LOCALTIME is not set
@@ -835,7 +877,11 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_LINENOISE is not set
 # BR2_PACKAGE_NCURSES is not set
 # BR2_PACKAGE_NEWT is not set
-# BR2_PACKAGE_PCRE is not set
+BR2_PACKAGE_PCRE=y
+# BR2_PACKAGE_PCRE_16 is not set
+# BR2_PACKAGE_PCRE_32 is not set
+# BR2_PACKAGE_PCRE_UTF is not set
+# BR2_PACKAGE_PCRE_UCP is not set
 # BR2_PACKAGE_POPT is not set
 # BR2_PACKAGE_READLINE is not set
 # BR2_PACKAGE_SLANG is not set
@@ -886,6 +932,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_EBTABLES is not set
 # BR2_PACKAGE_ETHTOOL is not set
 # BR2_PACKAGE_GESFTPSERVER is not set
+BR2_PACKAGE_HAPROXY=y
 # BR2_PACKAGE_HEIRLOOM_MAILX is not set
 # BR2_PACKAGE_HIAWATHA is not set
 # BR2_PACKAGE_HOSTAPD is not set
@@ -955,10 +1002,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_SOCAT is not set
 # BR2_PACKAGE_SOCKETCAND is not set
 # BR2_PACKAGE_SPAWN_FCGI is not set
-
-#
-# spice server depends on python (for pyparsing)
-#
+# BR2_PACKAGE_SPICE is not set
 # BR2_PACKAGE_SPICE_PROTOCOL is not set
 # BR2_PACKAGE_SQUID is not set
 # BR2_PACKAGE_STRONGSWAN is not set
@@ -1030,10 +1074,7 @@ BR2_PACKAGE_LIBNSPR_ARCH_SUPPORT=y
 # BR2_PACKAGE_NUT is not set
 # BR2_PACKAGE_POLKIT is not set
 # BR2_PACKAGE_QUOTA is not set
-
-#
-# supervisor needs the python interpreter
-#
+BR2_PACKAGE_SUPERVISOR=y
 
 #
 # systemd needs udev /dev management and a toolchain w/ IPv6, threads
